force-app/main/default/objects/sugati__Supplier_Voucher_Setting__c/sugati__Supplier_Voucher_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Supplier Voucher Setting</label>
</CustomObject>