force-app/main/default/objects/sugati__Supplier_Voucher_Setting__c/fields/sugati__Activity_Component_Lists__c.field-meta.xml
<CustomField>
    <fullName>sugati__Activity_Component_Lists__c</fullName>
    <label>Activity Component Lists</label>
    <length>255</length>
    <type>Text</type>
</CustomField>