force-app/main/default/objects/sugati__Supplier_Voucher_Setting__c/fields/sugati__Company_Logo_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__Company_Logo_Name__c</fullName>
    <label>Company Logo Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>