force-app/main/default/objects/sugati__Supplier_Voucher_Setting__c/fields/sugati__Detail_Header_Color__c.field-meta.xml
<CustomField>
    <fullName>sugati__Detail_Header_Color__c</fullName>
    <label>Detail Header Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>