force-app/main/default/objects/sugati__Supplier_Voucher_Setting__c/fields/sugati__Flight_Component_Lists__c.field-meta.xml
<CustomField>
    <fullName>sugati__Flight_Component_Lists__c</fullName>
    <label>Flight Component Lists</label>
    <length>255</length>
    <type>Text</type>
</CustomField>