force-app/main/default/objects/sugati__Supplier_Voucher_Setting__c/fields/sugati__Footer_Title_Color__c.field-meta.xml
<CustomField>
    <fullName>sugati__Footer_Title_Color__c</fullName>
    <label>Footer Title Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>