force-app/main/default/objects/sugati__Supplier_Voucher_Setting__c/fields/sugati__Header_Background_Color__c.field-meta.xml
<CustomField>
    <fullName>sugati__Header_Background_Color__c</fullName>
    <label>Header Background Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>