force-app/main/default/objects/sugati__Supplier_Voucher_Setting__c/fields/sugati__Header_Title_Color__c.field-meta.xml
<CustomField>
    <fullName>sugati__Header_Title_Color__c</fullName>
    <label>Header Title Color</label>
    <length>10</length>
    <type>Text</type>
</CustomField>