force-app/main/default/objects/sugati__Supplier_Voucher_Setting__c/fields/sugati__Show_Header_Contacts__c.field-meta.xml
<CustomField>
    <fullName>sugati__Show_Header_Contacts__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Header Contacts</label>
    <type>Checkbox</type>
</CustomField>