force-app/main/default/objects/sugati__Supplier_Voucher_Setting__c/fields/sugati__Show_Sugati_Water_Mark__c.field-meta.xml
<CustomField>
    <fullName>sugati__Show_Sugati_Water_Mark__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Sugati Water Mark</label>
    <type>Checkbox</type>
</CustomField>