force-app/main/default/objects/sugati__Supplier_Voucher_Setting__c/fields/sugati__Show_Voucher_For__c.field-meta.xml
<CustomField>
    <fullName>sugati__Show_Voucher_For__c</fullName>
    <defaultValue>true</defaultValue>
    <description>hide the header - Voucher For</description>
    <label>Show Voucher For</label>
    <type>Checkbox</type>
</CustomField>